increased the lineheight a bit to improve readability; made readMore allotted space larger to avoid longer readmore texts being cut off

--- a/style/templates/_software.scss
+++ b/style/templates/_software.scss
@@ -43,10 +43,11 @@
         p {
             margin-top: .5em;
             margin-bottom: .5em;
+            line-height: 1.5em;
         }
     }
     &.active>.readMoreContents {
-        max-height: 500px;
+        max-height: 800px;
     }
     >a {
         text-decoration:underline;
